--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       working-directory: ./src/ViveCortelazor
     
     - name: Generate pages
-      run: dotnet run --no-restore --configuration Release ssg ../../dist ViveCortelazor
+      run: dotnet run --no-restore --configuration Release ssg ../../dist
       working-directory: ./src/ViveCortelazor
 
     - name: Commit and push changes
