--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add dist
-        git commit -m "Update dist directory [skip ci]" || echo "No changes to commit"
+        git commit -m "Update dist directory" || echo "No changes to commit"
         git push
       working-directory: .
 
