--- a/src/ViveCortelazor/appsettings.json
+++ b/src/ViveCortelazor/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebSettings": {
+    "Host": "https://www.vivecortelazor.es"
+  }
 }
