Change Blog and Pages files to Content #89

--- a/src/ViveCortelazor/ViveCortelazor.csproj
+++ b/src/ViveCortelazor/ViveCortelazor.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Pages\**\*.md">
+    <None Update="Content\Pages\**\*.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Blog\**\*.md">
+    <None Update="Content\Blog\**\*.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
