--- a/src/ViveCortelazor/ViveCortelazor.csproj
+++ b/src/ViveCortelazor/ViveCortelazor.csproj
@@ -19,5 +19,15 @@
     <PackageReference Include="AspNetStatic" Version="0.26.4" />
     <PackageReference Include="Markdig" Version="0.40.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Content\Blog\" />
+    <Folder Include="Content\Pages\" />
+  </ItemGroup>
+
+  <Target Name="CleanContentDirectories" BeforeTargets="Build">
+    <RemoveDir Directories="$(OutputPath)Content\Pages;$(OutputPath)Content\Blog" />
+    <MakeDir Directories="$(OutputPath)Content\Pages;$(OutputPath)Content\Blog" />
+  </Target>
 
 </Project>
