--- a/tests/ViveCortelazor.Tests/ViveCortelazor.Tests.csproj
+++ b/tests/ViveCortelazor.Tests/ViveCortelazor.Tests.csproj
@@ -35,4 +35,9 @@
     <Using Include="System.Threading.Tasks" />
   </ItemGroup>
 
+  <Target Name="CleanContentDirectories" BeforeTargets="Build">
+    <RemoveDir Directories="$(OutputPath)Content\Pages;$(OutputPath)Content\Blog" />
+    <MakeDir Directories="$(OutputPath)Content\Pages;$(OutputPath)Content\Blog" />
+  </Target>
+
 </Project>
