--- a/tests/ViveCortelazor.Tests/ViveCortelazor.Tests.csproj
+++ b/tests/ViveCortelazor.Tests/ViveCortelazor.Tests.csproj
@@ -35,7 +35,7 @@
     <Using Include="System.Threading.Tasks" />
   </ItemGroup>
 
-  <Target Name="CleanContentDirectories" BeforeTargets="Build">
+  <Target Name="CleanContentDirectories" BeforeTargets="BeforeCompile">
     <RemoveDir Directories="$(OutputPath)Content\Pages;$(OutputPath)Content\Blog" />
     <MakeDir Directories="$(OutputPath)Content\Pages;$(OutputPath)Content\Blog" />
   </Target>
