--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,13 @@ jobs:
       working-directory: ./src/ViveCortelazor
     - name: Build
       run: dotnet build --no-restore --configuration Release
+      env:
+        ASPNETCORE_ENVIRONMENT: ContinuousIntegration
       working-directory: ./src/ViveCortelazor
     - name: Generate pages
       run: dotnet run --no-restore --configuration Release ssg ../../web
+      env:
+        ASPNETCORE_ENVIRONMENT: ContinuousIntegration
       working-directory: ./src/ViveCortelazor
 
     - name: HTTP Server Action
