--- a/src/ViveCortelazor/Properties/launchSettings.json
+++ b/src/ViveCortelazor/Properties/launchSettings.json
@@ -32,8 +32,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      //"commandLineArgs": "ssg c:\\ssg",
-      "applicationUrl": "https://localhost:7169;http://localhost:5033",
+      "applicationUrl": "http://localhost:5033",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "ContinuousIntegration"
       }
@@ -42,8 +41,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      //"commandLineArgs": "ssg c:\\ssg",
-      "applicationUrl": "https://localhost:7169;http://localhost:5033",
+      "applicationUrl": "http://localhost:5033",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
