--- a/src/ViveCortelazor/Properties/launchSettings.json
+++ b/src/ViveCortelazor/Properties/launchSettings.json
@@ -26,7 +26,8 @@
       "applicationUrl": "https://localhost:7169;http://localhost:5033",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchUrl": "es/blog/fiesta-del-chopo"
     },
     "ContinuousIntegration": {
       "commandName": "Project",
