Update home page text #223

--- a/src/ViveCortelazor/Properties/launchSettings.json
+++ b/src/ViveCortelazor/Properties/launchSettings.json
@@ -27,7 +27,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchUrl": "es/donde-dormir"
+      "launchUrl": "es"
     },
     "ContinuousIntegration": {
       "commandName": "Project",
